--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -49,3 +49,19 @@
   gap: 32px;
   align-items: center;
 }
+@media screen and (max-width: 1280px) {
+  .list {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 425px) {
+  .header {
+    padding: 15px 15px 15px 30px;
+  }
+  .list {
+    gap: 15px;
+  }
+  .logoDecor {
+    width: 80%;
+  }
+}
