--- a/src/components/HeroesList/HeroesList.module.css
+++ b/src/components/HeroesList/HeroesList.module.css
@@ -1,57 +1,138 @@
 .container {
   background-color: #1a1a1a;
   color: white;
-  padding: 40px 115px;
+  padding: 40px 160px;
   text-align: center;
   max-width: 1440px;
   margin: 0 auto;
-  border-radius: 20px;
+  border-radius: 20px 20px 0 0;
 }
 
 .title {
-  font-size: 36px;
+  font-size: 38px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
 .subtitle {
-  font-size: 18px;
+  font-size: 22px;
   margin-bottom: 40px;
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: #2a2a2a;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px 30px 30px 30px;
   max-width: 330px;
-  /* min-width: 250px; */
-  min-height: 430px;
+  height: 430px;
   box-sizing: border-box;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
+}
+.card:hover {
+  transform: scale(1.02);
 }
 
-.iconContainer {
-  margin-bottom: 15px;
+.imageContainer {
+  margin-bottom: 20px;
 }
 
-.icon {
-  width: 60px;
-  height: 60px;
+.image {
+  object-fit: cover;
+  width: 250px;
+  height: 250px;
+  border-radius: 100%;
 }
 
 .cardTitle {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
 .cardDescription {
-  font-size: 14px;
+  font-size: 16px;
   color: #cccccc;
+  max-height: 105px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+.loadMore {
+  margin-top: 40px;
+  cursor: pointer;
+  border: none;
+  max-width: 220px;
+  padding: 14px 40px;
+  background-color: #a259ff;
+  border-radius: 30px;
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+  transition: background-color 0.35s ease;
+}
+.loadMore:hover,
+.loadMore:focus {
+  background-color: #b882ff;
+}
+@media screen and (max-width: 1280px) {
+  .container {
+    padding: 40px 80px;
+  }
+  .card {
+    width: 210px;
+    height: 320px;
+  }
+  .image {
+    width: 133px;
+    height: 133px;
+  }
+  .cardTitle {
+    font-size: 16px;
+  }
+  .cardDescription {
+    font-size: 12px;
+  }
+  .title {
+    font-size: 28px;
+  }
+
+  .subtitle {
+    font-size: 16px;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 30px;
+  }
+  .imageContainer {
+    margin: 0;
+    min-height: 100px;
+    min-width: 100px;
+  }
+  .image {
+    width: 100px;
+    height: 100px;
+  }
+  .card {
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    width: 290px;
+    height: 160px;
+    padding: 12px;
+  }
 }
