--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,7 +1,7 @@
 .hero {
   padding: 250px 0 0 0;
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url("../../../public/img/hero.jpg");
+    url("/public/img/hero.jpg");
   background-size: cover;
   background-position: center;
   margin: 20px auto 64px auto;
