--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -45,3 +45,37 @@
     margin: 20px 32px 64px 32px;
   }
 }
+@media (max-width: 1024px) {
+  .title {
+    font-size: 28px;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
+}
+@media (max-width: 768px) {
+  .heroContainer {
+    padding: 40px 20px;
+    max-width: 80%;
+  }
+  .title {
+    font-size: 24px;
+  }
+  .subtitle {
+    font-size: 14px;
+  }
+}
+@media (max-width: 425px) {
+  .heroContainer {
+    max-width: 100%;
+  }
+  .hero {
+    margin: 20px 20px 64px 20px;
+  }
+  .title {
+    font-size: 20px;
+  }
+  .subtitle {
+    font-size: 12px;
+  }
+}
