--- a/src/components/HeroDetail/HeroDetail.module.css
+++ b/src/components/HeroDetail/HeroDetail.module.css
@@ -71,6 +71,7 @@
 
 .updateHero,
 .deleteHero {
+  width: 136px;
   padding: 15px 20px;
   border: none;
   border-radius: 10px;
@@ -98,4 +99,41 @@
 .deleteHero:hover {
   border: 1px solid #b882ff;
   color: #b882ff;
+}
+
+@media screen and (max-width: 1024px) {
+  .username {
+    font-size: 38px;
+  }
+  .profileContent {
+    padding: 0 72px 40px 72px;
+  }
+  .bioName {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .username {
+    font-size: 38px;
+  }
+  .profileContent {
+    padding: 30px;
+  }
+  .buttons {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .updateHero,
+  .deleteHero {
+    width: 180px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .username {
+    font-size: 28px;
+  }
+  .contentBox {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
 }
