--- a/src/components/ListOfPhotos/ListOfPhotos.module.css
+++ b/src/components/ListOfPhotos/ListOfPhotos.module.css
@@ -13,14 +13,15 @@
   gap: 40px;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 80px;
+  padding: 80px 115px;
   background-color: #1a1a1a;
   margin: 0 auto;
 }
 
 .card {
-  max-width: 330px;
-  max-height: 470px;
+  box-sizing: border-box;
+  width: 330px;
+  height: 470px;
   display: flex;
   align-items: stretch;
   background-color: #2b2b2b;
@@ -39,4 +40,23 @@
   height: auto;
   border-radius: 8px;
   object-fit: cover;
+}
+@media screen and (max-width: 768px) {
+  .galleryContainer {
+    gap: 30px;
+    padding: 80px 72px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .galleryContainer {
+    padding: 80px 30px;
+  }
+  .card {
+    width: 315px;
+    height: 402px;
+  }
+  .container p {
+    width: 205px;
+    margin: 0 auto;
+  }
 }
