--- a/src/components/HeroDetail/HeroDetail.module.css
+++ b/src/components/HeroDetail/HeroDetail.module.css
@@ -27,13 +27,62 @@
   margin: 0 auto;
 }
 
-.avatar {
+.avatarContainer {
+  position: relative;
   width: 100px;
   height: 100px;
   border-radius: 20px;
   margin-top: -50px;
   border: 2px solid #1b1b1b;
+  z-index: 1;
+}
+
+.avatar {
+  z-index: 1;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+}
+@property --angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
+.avatarContainer::after,
+.avatarContainer::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: conic-gradient(
+    from var(--angle),
+    #ff4545,
+    #00ff99,
+    #006aff,
+    #ff0095,
+    #ff4545
+  );
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  z-index: -1;
+  padding: 2px;
+  border-radius: 20px;
+  animation: 3s spin linear infinite;
+}
+.avatarContainer::before {
+  filter: blur(1.5rem);
+  opacity: 0.5;
+}
+@keyframes spin {
+  from {
+    --angle: 0deg;
+  }
+  to {
+    --angle: 360deg;
+  }
 }
 
 .username {
@@ -113,7 +162,7 @@
   }
 }
 @media screen and (max-width: 768px) {
-  .avatar {
+  .avatarContainer {
     margin-top: -80px;
   }
   .username {
